# SudokuSolver

./: CMakeLists.txt  MakeFile  README.md  backup.txt  imgui.ini  main copy.cpp  main.cpp  plan.txt  pr.py  sudoku.cpp
imgui/: imgui.ini
sudokuHelperFunctions/: sudoku.cpp  sudoku.h
sudokusToLoadData/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test/: main.cpp
tests/: main.cpp
